tolk-tester/tests/invalid-syntax/err-3996.tolk
fun main() {
    return 0b_;
}

/**
@compilation_should_fail
@stderr invalid binary integer
 */
